--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,26 @@
-node_modules
+# Node modules
+node_modules/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS stuff
+.DS_Store
+Thumbs.db
+
+# Env files (secrets)
+.env
+.env.local
+
+# Build output
+dist/
+build/
+
+# IDEs
+.vscode/
+.idea/
+
+# Optional: ignore coverage reports
+coverage/
